@@ -1,3 +1,11 @@
+2003-04-26  Bernhard Held <bernhard@bernhardheld.de>
+
+	* as/Makefile: new EXEEXT
+	* as/z80/Makefile: remove trailing slash of BUILDIR
+	* as/z80/clean.mk: new EXEEXT
+	* Makefile.common.in: add to CFLAGS (and others), don't replace it
+	* support/cpp2/Makefile.in: new EXEEXT 
+
 2003-04-24  Bernhard Held <bernhard@bernhardheld.de>
 
 	Cygwin's gcc always appends .exe: 'gcc -o a a.c' creates a.exe;
